fixed spacing for screens

--- a/src/app/findfood/styles.css
+++ b/src/app/findfood/styles.css
@@ -42,19 +42,30 @@
     font-size: 13px;
 }
 .food-item {
+    
     border: 1px solid rgb(143, 139, 139);
-    flex: 0 1 calc(33.33333% - 20px); 
-    width: calc(33.33333% - 20px);
+    flex: 0 1 calc(33.3% - 10px); 
+    width: calc(33.3% - 10px);
     display: inline-block;
     border-radius: 5px;
     margin-bottom: 10px;
-    height:345px;
-    margin-left:10px;
+    min-height:400px;
+    margin-left:5px;
     background-color:#F7F5F0 ;
     box-shadow: 0px 2px 4px rgba(80, 79, 79, 0.3); 
-    min-width: 450px; 
+    min-width: 400px; 
+    flex-direction: column; /* Align items vertically */
+    justify-content: center; /* Center items vertically */
+    align-items: center; /* Center items horizontally */
 }
-@media (max-width: 900px) {
+.food-item img {
+    max-width: 100%; 
+    max-height: 100%; 
+}
+.food-item h3{
+    font-size:18px;
+}
+@media (max-width: 1024px) {
     .food-item {
         flex: 0 1 calc(50% - 20px); 
         max-width: calc(50% - 20px); 
@@ -63,12 +74,13 @@
 
 @media (max-width: 600px) {
     .food-item {
-        width: 100%; /* Single item per row on even smaller screens */
+        width: 100%; 
+        margin-right: 0;
     }
 }
 
 .food-list {
-    margin-left:50px; 
+    margin-left:40px; 
 }
 .location-button:hover {
     opacity: 0.5;
